--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "express": "^4.21.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0"
-  }
+  },
+  "workspaces": ["server", "mySQLtoMongo"]
+
 }
