--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "web-vitals": "^4.2.4"
   },
-  "workspaces": ["server", "mySQLtoMongo"]
-
+  "workspaces": [
+    "server",
+    "mySQLtoMongo"
+  ]
 }
