--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ MYSQL_HOST = 'XXXXXXX'
 MYSQL_USERNAME = 'XXXXXXX'
 MYSQL_PASSWORD = 'XXXXXXX'
 MYSQL_DATABASE = 'XXXXXXX'
+MONGO_HOST = "XXXXXXX"
+MONGO_PORT = XXXXXXX
+MONGO_DATABASE = "XXXXXXX"
